--- a/app/src/main/res/layout/activity_notice_view.xml
+++ b/app/src/main/res/layout/activity_notice_view.xml
@@ -5,10 +5,25 @@
     android:id="@+id/activity_notice_view"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.iven.app.activity.NoticeViewActivity">
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:gravity="center">
+
+        <TextView
+            android:id="@+id/tv_jd"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="京东："
+            android:textSize="20dp"/>
+
+        <com.iven.app.view.NoticeView
+            android:id="@+id/notice_view"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:layout_toRightOf="@id/tv_jd"/>
+    </RelativeLayout>
 </RelativeLayout>
