--- a/app/src/main/res/layout/updatedialog.xml
+++ b/app/src/main/res/layout/updatedialog.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
-              android:layout_height="550px"
+              android:layout_height="@dimen/value_600_px"
               android:layout_gravity="center"
               android:background="@color/color_white"
               android:gravity="center_horizontal"
@@ -9,8 +9,8 @@
 
 
     <ImageView
-        android:layout_width="56px"
-        android:layout_height="56px"
+        android:layout_width="@dimen/value_56_px"
+        android:layout_height="@dimen/value_56_px"
         android:layout_gravity="center"
         android:layout_marginTop="@dimen/value_30_px"
         android:scaleType="fitXY"
@@ -86,13 +86,13 @@
             <TextView
                 android:id="@+id/dialog_textView_left"
                 android:layout_width="0px"
-                android:layout_height="90px"
+                android:layout_height="@dimen/value_120_px"
                 android:layout_weight="1"
                 android:gravity="center"
-                android:padding="@dimen/value_20_px"
+                android:padding="@dimen/value_10_px"
                 android:text="继续使用"
                 android:textColor="@color/color_429ae6"
-                android:textSize="18sp"
+                android:textSize="16sp"
                 android:visibility="gone"/>
 
             <TextView
@@ -105,13 +105,13 @@
             <TextView
                 android:id="@+id/dialog_textView_right"
                 android:layout_width="0px"
-                android:layout_height="90px"
+                android:layout_height="@dimen/value_120_px"
                 android:layout_weight="1"
                 android:gravity="center"
-                android:padding="@dimen/value_20_px"
+                android:padding="@dimen/value_10_px"
                 android:text="更新"
                 android:textColor="@color/color_429ae6"
-                android:textSize="18sp"/>
+                android:textSize="16sp"/>
         </LinearLayout>
     </LinearLayout>
 
