--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,6 +8,13 @@
     android:orientation="vertical"
     tools:context="com.iven.app.MainActivity">
     <Button
+        android:id="@+id/btn_realm_date"
+        style="@style/btn_common_style"
+        android:layout_marginTop="@dimen/value_20_px"
+        android:onClick="btnClick"
+        android:text="Realm数据库了解"
+        android:visibility="visible"/>
+    <Button
         android:id="@+id/btn_jingdong"
         style="@style/btn_common_style"
         android:layout_marginTop="@dimen/value_20_px"
