--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -29,4 +29,5 @@
     <color name="color_429ae6">#429ae6</color>
     <color name="transparent">@android:color/transparent</color>
     <color name="color_cc222222">#cc222222</color>
+    <color name="color_1e3c72">#1e3c72</color>
 </resources>
