--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -36,6 +36,7 @@
         <item name="android:textColor">@color/white</item>
         <item name="android:textSize">15dp</item>
     </style>
+
     <style name="gray_text_middle">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
@@ -46,5 +47,19 @@
     <style name="textViewNoPadding">
         <item name="android:lineSpacingMultiplier">0.9</item>
         <item name="android:includeFontPadding">false</item>
+    </style>
+
+    <style name="real_home_btn">
+        <item name="android:layout_width">0px</item>
+        <item name="android:layout_height">match_parent</item>
+        <item name="android:gravity">center</item>
+        <item name="android:layout_gravity">center</item>
+        <item name="android:button">@null</item>
+        <item name="android:layout_weight">1</item>
+        <item name="android:textColor">@color/selector_r_btn_home</item>
+        <item name="android:paddingBottom">@dimen/value_16_px</item>
+        <item name="android:paddingTop">@dimen/value_16_px</item>
+        <item name="android:textSize">13sp</item>
+
     </style>
 </resources>
