--- a/app/src/main/res/layout/activity_fragment_home.xml
+++ b/app/src/main/res/layout/activity_fragment_home.xml
@@ -6,19 +6,21 @@
     android:layout_height="match_parent"
     android:background="@color/color_f4f4f4"
     android:orientation="vertical"
+    android:weightSum="10"
     tools:context="com.iven.app.activity.FragmentHomeActivity">
 
     <FrameLayout
         android:id="@+id/all_container"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="9"></FrameLayout>
+        android:layout_weight="9"/>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:padding="@dimen/value_20_px">
 
         <RadioGroup
             android:layout_width="match_parent"
