--- a/app/src/main/res/layout/layout_fragment_first.xml
+++ b/app/src/main/res/layout/layout_fragment_first.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
-              android:background="@color/color_f4f4f4"
+              android:background="@color/color_3F51B5"
               android:gravity="center"
               android:orientation="vertical">
 
@@ -10,4 +10,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="left++++++"/>
+
+    <Button
+        android:id="@+id/btn_fragment_01"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="点击"/>
 </LinearLayout>
