--- a/app/src/main/res/layout/layout_fragment_second.xml
+++ b/app/src/main/res/layout/layout_fragment_second.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
-              android:background="@color/color_f4f4f4"
+              android:background="@color/color_999999"
               android:gravity="center"
               android:orientation="vertical">
 
