--- a/app/src/main/res/layout/activity_test.xml
+++ b/app/src/main/res/layout/activity_test.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.iven.app.activity.RealmActivity">
+    tools:context="com.iven.app.activity.third.RealmActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
