--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,84 +8,110 @@
     android:orientation="vertical"
     tools:context="com.iven.app.MainActivity">
 
-    <Button
-        android:id="@+id/btn_fragment"
-        style="@style/btn_common_style"
-        android:layout_marginTop="@dimen/value_20_px"
-        android:onClick="btnClick"
-        android:text="Fragment"
-        android:visibility="visible"/>
-    <Button
-        android:id="@+id/btn_single_listview"
-        style="@style/btn_common_style"
-        android:layout_marginTop="@dimen/value_20_px"
-        android:onClick="btnClick"
-        android:text="ListView属性实现单选"
-        android:visibility="visible"/>
-    <Button
-        android:id="@+id/btn_multipl_listview"
-        style="@style/btn_common_style"
-        android:layout_marginTop="@dimen/value_20_px"
-        android:onClick="btnClick"
-        android:text="ListView属性实现多选"
-        android:visibility="visible"/>
-    <Button
-        android:id="@+id/btn_realm_date"
-        style="@style/btn_common_style"
-        android:layout_marginTop="@dimen/value_20_px"
-        android:onClick="btnClick"
-        android:text="Realm数据库了解"
-        android:visibility="visible"/>
-    <Button
-        android:id="@+id/btn_jingdong"
-        style="@style/btn_common_style"
-        android:layout_marginTop="@dimen/value_20_px"
-        android:onClick="btnClick"
-        android:text="仿京东快报效果"
-        android:visibility="visible"/>
-    <Button
-        android:id="@+id/btn_dialog"
-        style="@style/btn_common_style"
-        android:layout_marginTop="@dimen/value_20_px"
-        android:onClick="btnClick"
-        android:text="DialogUtils"
-        android:visibility="visible"/>
-    <Button
-        android:id="@+id/btn_version"
-        style="@style/btn_common_style"
-        android:layout_marginTop="@dimen/value_20_px"
-        android:onClick="btnClick"
-        android:text="版本更新"
-        android:visibility="visible"/>
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
-    <Button
-        android:id="@+id/btn_vdh"
-        style="@style/btn_common_style"
-        android:layout_marginTop="@dimen/value_20_px"
-        android:onClick="btnClick"
-        android:text="VDH"
-        android:visibility="visible"/>
-    <Button
-        android:id="@+id/btn_lv_slide"
-        style="@style/btn_common_style"
-        android:layout_marginTop="@dimen/value_20_px"
-        android:onClick="btnClick"
-        android:text="DragHelper实现ListView侧滑删除"
-        android:visibility="visible"/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
-    <Button
-        android:id="@+id/btn_pulltoresresh"
-        style="@style/btn_common_style"
-        android:layout_marginTop="@dimen/value_20_px"
-        android:onClick="btnClick"
-        android:text="PullToRefreshLayout"
-        android:visibility="gone"/>
+            <Button
+                android:id="@+id/btn_culmn"
+                style="@style/btn_common_style"
+                android:layout_marginTop="@dimen/value_20_px"
+                android:onClick="btnClick"
+                android:text="柱形图"
+                android:visibility="visible"/>
 
-    <ImageView
-        android:id="@+id/iv_circle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginTop="@dimen/value_20_px"
-        android:src="@mipmap/circle"/>
+            <Button
+                android:id="@+id/btn_fragment"
+                style="@style/btn_common_style"
+                android:layout_marginTop="@dimen/value_20_px"
+                android:onClick="btnClick"
+                android:text="Fragment"
+                android:visibility="visible"/>
+
+            <Button
+                android:id="@+id/btn_single_listview"
+                style="@style/btn_common_style"
+                android:layout_marginTop="@dimen/value_20_px"
+                android:onClick="btnClick"
+                android:text="ListView属性实现单选"
+                android:visibility="visible"/>
+
+            <Button
+                android:id="@+id/btn_multipl_listview"
+                style="@style/btn_common_style"
+                android:layout_marginTop="@dimen/value_20_px"
+                android:onClick="btnClick"
+                android:text="ListView属性实现多选"
+                android:visibility="visible"/>
+
+            <Button
+                android:id="@+id/btn_realm_date"
+                style="@style/btn_common_style"
+                android:layout_marginTop="@dimen/value_20_px"
+                android:onClick="btnClick"
+                android:text="Realm数据库了解"
+                android:visibility="visible"/>
+
+            <Button
+                android:id="@+id/btn_jingdong"
+                style="@style/btn_common_style"
+                android:layout_marginTop="@dimen/value_20_px"
+                android:onClick="btnClick"
+                android:text="仿京东快报效果"
+                android:visibility="visible"/>
+
+            <Button
+                android:id="@+id/btn_dialog"
+                style="@style/btn_common_style"
+                android:layout_marginTop="@dimen/value_20_px"
+                android:onClick="btnClick"
+                android:text="DialogUtils"
+                android:visibility="visible"/>
+
+            <Button
+                android:id="@+id/btn_version"
+                style="@style/btn_common_style"
+                android:layout_marginTop="@dimen/value_20_px"
+                android:onClick="btnClick"
+                android:text="版本更新"
+                android:visibility="visible"/>
+
+            <Button
+                android:id="@+id/btn_vdh"
+                style="@style/btn_common_style"
+                android:layout_marginTop="@dimen/value_20_px"
+                android:onClick="btnClick"
+                android:text="VDH"
+                android:visibility="visible"/>
+
+            <Button
+                android:id="@+id/btn_lv_slide"
+                style="@style/btn_common_style"
+                android:layout_marginTop="@dimen/value_20_px"
+                android:onClick="btnClick"
+                android:text="DragHelper实现ListView侧滑删除"
+                android:visibility="visible"/>
+
+            <Button
+                android:id="@+id/btn_pulltoresresh"
+                style="@style/btn_common_style"
+                android:layout_marginTop="@dimen/value_20_px"
+                android:onClick="btnClick"
+                android:text="PullToRefreshLayout"
+                android:visibility="gone"/>
+
+            <ImageView
+                android:id="@+id/iv_circle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="@dimen/value_20_px"
+                android:src="@mipmap/circle"/>
+        </LinearLayout>
+    </ScrollView>
 </LinearLayout>
