--- a/app/src/main/res/layout/activity_material_design.xml
+++ b/app/src/main/res/layout/activity_material_design.xml
@@ -14,6 +14,25 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:id="@+id/md_container"
+            android:layout_height="0dp"
+            android:layout_weight="9"
+            >
+
+        </FrameLayout>
+
+        <android.support.design.widget.TabLayout
+            android:id="@+id/tab_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/color_048e63"
+            app:tabGravity="fill"
+            app:tabIndicatorColor="@android:color/transparent"
+            app:tabMode="fixed"
+            app:tabSelectedTextColor="#FF0000FF"
+            />
     </LinearLayout>
     <!--侧边栏-->
     <android.support.design.widget.NavigationView
@@ -21,9 +40,9 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="left"
-        app:itemTextColor="@color/color_3F51B5"
         android:fitsSystemWindows="true"
         app:headerLayout="@layout/layout_navigationview_header"
+        app:itemTextColor="@color/color_3F51B5"
         app:menu="@menu/menu_layout">
 
     </android.support.design.widget.NavigationView>
