--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -68,7 +68,7 @@
                 android:layout_marginTop="@dimen/value_20_px"
                 android:onClick="btnClick"
                 android:text="Realm数据库了解"
-                android:visibility="visible"/>
+                android:visibility="gone"/>
 
             <Button
                 android:id="@+id/btn_jingdong"
