--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,6 +17,13 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
             <Button
+                android:id="@+id/btn_gallery_viewpager"
+                style="@style/btn_common_style"
+                android:layout_marginTop="@dimen/value_20_px"
+                android:onClick="btnClick"
+                android:text="ViewPager实现Gallery效果"
+                android:visibility="visible"/>
+            <Button
                 android:id="@+id/btn_material_design"
                 style="@style/btn_common_style"
                 android:layout_marginTop="@dimen/value_20_px"
