--- a/app/src/main/res/layout/activity_list_view_single.xml
+++ b/app/src/main/res/layout/activity_list_view_single.xml
@@ -20,6 +20,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:choiceMode="singleChoice"
+        android:listSelector="@android:color/transparent"
         android:divider="@drawable/part_line"
         android:dividerHeight="1dp"
         android:overScrollMode="never">
