--- a/app/src/main/res/layout/activity_test2.xml
+++ b/app/src/main/res/layout/activity_test2.xml
@@ -19,7 +19,7 @@
         android:gravity="center">
 
         <Button
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:onClick="loadFloatViewDate"
             android:text="load"
