--- a/app/src/main/res/menu/menu_layout.xml
+++ b/app/src/main/res/menu/menu_layout.xml
@@ -7,7 +7,7 @@
     <item
         android:id="@+id/wallet"
         android:icon="@mipmap/menu02"
-        android:title="钱包"/>
+        android:title="折线图"/>
     <item
         android:id="@+id/photo"
         android:icon="@mipmap/menu03"
