根据银行卡号获取LOGO以及名称

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,6 +16,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
+
             <Button
                 android:id="@+id/btn_gallery_viewpager"
                 style="@style/btn_common_style"
@@ -137,6 +138,13 @@
                 android:layout_marginTop="@dimen/value_20_px"
                 android:onClick="btnClick"
                 android:text="柱形图"
+                android:visibility="visible"/>
+            <Button
+                android:id="@+id/btn_bank_search"
+                style="@style/btn_common_style"
+                android:layout_marginTop="@dimen/value_20_px"
+                android:onClick="btnClick"
+                android:text="根据银行卡号获取银行LOGO"
                 android:visibility="visible"/>
             <ImageView
                 android:id="@+id/iv_circle"
