--- a/app/src/main/res/layout/activity_test2.xml
+++ b/app/src/main/res/layout/activity_test2.xml
@@ -11,11 +11,12 @@
         android:id="@+id/float_view"
         android:layout_width="match_parent"
         android:layout_height="300dp"
-        android:visibility="visible"/>
+        android:visibility="gone"/>
 
     <com.iven.app.view.CountDownAdView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:visibility="gone"
         />
 
     <LinearLayout
