--- a/app/src/main/res/layout/layout_window.xml
+++ b/app/src/main/res/layout/layout_window.xml
@@ -3,6 +3,7 @@
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:gravity="center"
+              android:id="@+id/ll_window"
               android:orientation="vertical">
 
     <TextView
