--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -124,7 +124,7 @@
                 android:layout_marginTop="@dimen/value_20_px"
                 android:onClick="btnClick"
                 android:text="PullToRefreshLayout"
-                android:visibility="gone"/>
+                android:visibility="visible"/>
             <Button
                 android:id="@+id/btn_test"
                 style="@style/btn_common_style"
