--- a/app/src/main/res/layout/activity_pull_to_refresh.xml
+++ b/app/src/main/res/layout/activity_pull_to_refresh.xml
@@ -9,13 +9,13 @@
     tools:context="com.iven.app.activity.PullToRefreshActivity">
 
     <com.iven.app.view.PullToRefreshLayout
-        android:layout_width="match_parent"
         android:id="@+id/pull_to_refresh"
+        android:layout_width="match_parent"
         android:layout_height="match_parent">
 
         <ListView
             android:id="@+id/test_pull_listview"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"></ListView>
+            android:layout_height="wrap_content"/>
     </com.iven.app.view.PullToRefreshLayout>
 </LinearLayout>
