--- a/app/src/main/res/layout/layout_head.xml
+++ b/app/src/main/res/layout/layout_head.xml
@@ -9,12 +9,12 @@
     >
 
 
-    <!--<ProgressBar-->
-    <!--android:id="@+id/pb_view"-->
-    <!--android:layout_width="20dp"-->
-    <!--android:layout_height="20dp"-->
-    <!--android:layout_centerHorizontal="true"-->
-    <!--android:layout_above="@+id/text_view" />-->
+    <ProgressBar
+    android:id="@+id/pb_view"
+    android:layout_width="20dp"
+    android:layout_height="20dp"
+    android:layout_centerHorizontal="true"
+    android:layout_above="@+id/text_view" />
 
     <!--<ImageView-->
     <!--android:id="@+id/image_view"-->
