--- a/app/src/main/res/layout/layout_bounch_sv.xml
+++ b/app/src/main/res/layout/layout_bounch_sv.xml
@@ -12,7 +12,7 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="450dp"
+            android:layout_height="match_parent"
             android:layout_gravity="bottom"
             android:gravity="bottom">
 
