--- a/app/src/main/res/layout/layout_fragment_first.xml
+++ b/app/src/main/res/layout/layout_fragment_first.xml
@@ -4,16 +4,7 @@
               android:layout_height="match_parent"
               android:background="@color/color_3F51B5"
               android:gravity="center"
+              android:id="@+id/ll_frag"
               android:orientation="vertical">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="left++++++"/>
-
-    <Button
-        android:id="@+id/btn_fragment_01"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="点击"/>
 </LinearLayout>
